tests/ui/multiple_backends.stderr
error: multiple database backends specified

         = help: remove one of the backends

 --> tests/ui/multiple_backends.rs:3:24
  |
3 | #[dbstruct(db=sled, db=trait)]
  |                        ^^^^^
